# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.75 2009-12-09 10:15:29 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.6 (2009/??/??)
 - (2009/12/09) Fixed bug#4556 - translation "Accounted Time" to german "Zugewiesene Zeit".
 - (2009/12/09) Fixed bug#4184 - Can't call method "NotificationGet" on
    an undefined value.
 - (2009/12/09) Fixed bug#4371 - DataSelected value for
    PreferencesGroups###WatcherNotify doesn't work
 - (2009/12/09) Fixed bug#4486 - Some preferences displayed in AdminUser are not correct.
 - (2009/12/09) Fixed bug#4363 - Layout.pm -> PageNavBar() mistakes because of
    missing checks and descriptions
 - (2009/12/08) Fixed bug#4361 - Umlauts in Dashboard are not displayed correcty
    after refresh on non-unicode databases.
 - (2009/12/08) Fixed bug# 4323 - Customer Interface shows last customer article
    instead of last article.
 - (2009/12/08) Fixed bug#4384 - Customer User Info not deleted when From in
    AgentTicketPhone is changed.
 - (2009/12/08) Fixed bug#4482 - Owner update possible with no new owner set.
 - (2009/12/07) Fixed bug#4246 - Response Templates fail to populate for certain
    email tickets.
 - (2009/12/07) Fixed bug#4381 - Function change_selection in AgentTicketMove.
 - (2009/12/07) Fixed bug#4400 - OTRS switches back to phone view when closing
    ticket after split.
 - (2009/12/07) Fixed bug#4597 - Unnecessary slash in download links.
 - (2009/12/07) Fixed bug#2768 - AttachmentsContent-Disposition header downloading
    a non-ASCII filename.
 - (2009/12/07) Fixed bug#4282 - Fixed problems with CustomerInfo for Usernames
    with a '+'.
 - (2009/12/07) Fixed bug#4477 - Uninitialized Value issue with Redirect()
    function in Layout.pm.