@@ -2,7 +2,7 @@
 # Kernel/System/TemplateGenerator.pm - generate salutations, signatures and responses
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: TemplateGenerator.pm,v 1.34 2009-09-08 07:47:46 martin Exp $
+# $Id: TemplateGenerator.pm,v 1.34.2.1 2009-12-09 14:20:23 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -18,11 +18,12 @@ use Kernel::System::HTMLUtils;
 use Kernel::System::Salutation;
 use Kernel::System::Signature;
 use Kernel::System::StdResponse;
+use Kernel::System::SystemAddress;
 use Kernel::System::Notification;
 use Kernel::System::AutoResponse;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.34 $) [1];
+$VERSION = qw($Revision: 1.34.2.1 $) [1];
 
 =head1 NAME
 
@@ -142,12 +143,13 @@ sub new {
 
     $Self->{RichText} = $Self->{ConfigObject}->Get('Frontend::RichText');
 
-    $Self->{HTMLUtilsObject}    = Kernel::System::HTMLUtils->new(%Param);
-    $Self->{SalutationObject}   = Kernel::System::Salutation->new(%Param);
-    $Self->{SignatureObject}    = Kernel::System::Signature->new(%Param);
-    $Self->{StdResponseObject}  = Kernel::System::StdResponse->new(%Param);
-    $Self->{NotificationObject} = Kernel::System::Notification->new(%Param);
-    $Self->{AutoResponseObject} = Kernel::System::AutoResponse->new(%Param);
+    $Self->{HTMLUtilsObject}     = Kernel::System::HTMLUtils->new(%Param);
+    $Self->{SalutationObject}    = Kernel::System::Salutation->new(%Param);
+    $Self->{SignatureObject}     = Kernel::System::Signature->new(%Param);
+    $Self->{StdResponseObject}   = Kernel::System::StdResponse->new(%Param);
+    $Self->{SystemAddressObject} = Kernel::System::SystemAddress->new(%Param);
+    $Self->{NotificationObject}  = Kernel::System::Notification->new(%Param);
+    $Self->{AutoResponseObject}  = Kernel::System::AutoResponse->new(%Param);
 
     return $Self;
 }
@@ -574,10 +576,23 @@ sub AutoResponse {
         NoCleanup    => 1,
     );
 
-    # get sender attributes
-    my %Address = $Self->{QueueObject}->GetSystemAddress( QueueID => $Ticket{QueueID} );
-    $AutoResponse{SenderAddress}  = $Address{Email};
-    $AutoResponse{SenderRealname} = $Address{RealName};
+    # get sender attributes based on auto response type
+    if ( $AutoResponse{SystemAddressID} ) {
+        my %Address = $Self->{SystemAddressObject}->SystemAddressGet(
+            ID => $AutoResponse{SystemAddressID},
+        );
+        $AutoResponse{SenderAddress}  = $Address{Name};
+        $AutoResponse{SenderRealname} = $Address{Realname};
+    }
+
+    # get sender attributes based on queue
+    else {
+        my %Address = $Self->{QueueObject}->GetSystemAddress(
+            QueueID => $Ticket{QueueID},
+        );
+        $AutoResponse{SenderAddress}  = $Address{Email};
+        $AutoResponse{SenderRealname} = $Address{RealName};
+    }
 
     # add urls and verify to be full html document
     if ( $Self->{RichText} ) {
@@ -1229,6 +1244,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.34 $ $Date: 2009-09-08 07:47:46 $
+$Revision: 1.34.2.1 $ $Date: 2009-12-09 14:20:23 $
 
 =cut
