@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.75 2009-12-09 10:15:29 mg Exp $
+# $Id: CHANGES,v 1.993.2.76 2009-12-09 14:20:22 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,10 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/12/08) Fixed bug#4584 - Auto response does not use selected from e-mail
+    address.
+ - (2009/12/08) Fixed bug#4435 - Inline attachments break in some scenarios like
+    AgentTicketCompose and AgentTicketForward.
  - (2009/12/09) Fixed bug#4556 - translation "Accounted Time" to german "Zugewiesene Zeit".
  - (2009/12/09) Fixed bug#4184 - Can't call method "NotificationGet" on
     an undefined value.
